--- a/about.html
+++ b/about.html
@@ -4,4 +4,4 @@ title: About
 header-img: "img/about-bg.png"
 ---
 
-<p></p>
+<p>Extremely fond of coding, caffeine, and canines. Mildly fond of alliteration.</p>
